Fixed spacing bug

--- a/rails/w6d2/css-review/css/01-header.css
+++ b/rails/w6d2/css-review/css/01-header.css
@@ -1,21 +1,21 @@
 /* PHASE 1: Header */
 
 body {
-  /* Write your css here... */
   font-family: sans-serif;
-  font-weight: 400, 700;
-  font-size: 24px, 16px, 14px;
-  background-color: #eee;
+  font-weight: 400;
+  font-size:16px;
+  background: #eee;
 }
 
 .header {
-  background-color: red;
+  background: red;
+  border-bottom: 1px solid #ccc;
+  color: #fff;
 }
 
 .header a {
   display: block;
-  padding: 20px;
-  color: white;
+  padding: 10px 20px;
 }
 
 .header-nav {
