--- a/rails/w6d2/css-review/css/03-content.css
+++ b/rails/w6d2/css-review/css/03-content.css
@@ -10,7 +10,7 @@
 }
 
 .content-sidebar {
-  width: 200;
+  width: 200px;
   float: left;
   padding: 20px;
 }
